# ocaml-note-app

./: .gitignore  README.md  dune-project  notes_app.opam
src/: content.ml  controller.ml  controller.mli  dune  no.txt  note_app.ml  persistence.ml  persistence.mli
static/: main.js  style.css
test/: dune  tests.ml
