(library
  (name persistence)
  (modules persistence)
  (libraries
    core
    sqlite3)
  (preprocess(pps ppx_deriving_yojson bisect_ppx)))

(library
  (name content)
  (modules content)
  (libraries
    core
    tyxml
    persistence)
  (preprocess (pps ppx_deriving_yojson bisect_ppx)))

(library
  (name controller)
  (modules controller)
  (libraries
    opium
    persistence
    content)
  (preprocess (pps ppx_deriving_yojson bisect_ppx)))