(library
  (name persistence)
  (modules persistence)
  (libraries
    core
    sqlite3)
  (preprocess(pps bisect_ppx)))

(library
  (name content)
  (modules content)
  (libraries
    core
    tyxml
    persistence)
  (preprocess (pps bisect_ppx)))

(library
  (name controller)
  (modules controller)
  (libraries
    opium
    persistence
    content)
  (preprocess (pps bisect_ppx)))